--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Time Manager</title>
     <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.35/build/spline-viewer.js"></script>
   </head>
   <body>
     <div id="app"></div>
